kubernetes/system/network-policies/trivyhub.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: trivyhub
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# App web : reçoit de Traefik, sort vers postgres + K8s API (VulnerabilityReports)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trivy-dashboard-web
  namespace: trivyhub
spec:
  podSelector:
    matchLabels:
      app: trivy-dashboard-web-prod
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: trivy-dashboard-web-prod-postgres
      ports:
        - port: 5432
    # K8s API pour lire les VulnerabilityReports
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
        - port: 6443
    # DNS
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# Postgres trivyhub
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trivy-dashboard-postgres
  namespace: trivyhub
spec:
  podSelector:
    matchLabels:
      app: trivy-dashboard-web-prod-postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: trivy-dashboard-web-prod
      ports:
        - port: 5432
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
